--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@ header h1 { font-size: 1.8em; margin: 0; color: #1a365d; }
   margin-bottom: 12px;
 }
 
-.controls input, .controls select {
+.controls input {
   padding: 6px 10px;
   border: 1px solid #cbd5e0;
   border-radius: 6px;
   font-size: 0.95em;
 }
 
-.controls input:focus, .controls select:focus {
+.controls input:focus {
   outline: none;
   border-color: #2b6cb0;
   box-shadow: 0 0 4px rgba(43,108,176,0.3);
@@ -59,19 +59,6 @@ header h1 { font-size: 1.8em; margin: 0; color: #1a365d; }
   box-shadow: 0 2px 8px rgba(0,0,0,0.1);
 }
 
-#main-table thead th {
-  position: sticky;
-  top: 0;
-  background-color: #2b6cb0;
-  color: #fff;
-  text-align: left;
-  padding: 10px;
-  font-weight: 600;
-  border-bottom: 2px solid #1a365d;
-  z-index: 3;
-  cursor: pointer;
-}
-
 #main-table tbody td {
   padding: 10px;
   border-bottom: 1px solid #e2e8f0;
@@ -87,14 +74,24 @@ header h1 { font-size: 1.8em; margin: 0; color: #1a365d; }
   border-top: 2px solid #81e6d9;
   z-index: 2;
   position: sticky;
-  top: 40px;
+  top: 0;
 }
 
 .group-header-row td {
   padding: 8px;
+  position: relative;
 }
 
-.group-header-row:hover td { background-color: #b2f5ea; }
+/* Arrow animation */
+.group-header-row td .arrow {
+  display: inline-block;
+  margin-left: 10px;
+  transition: transform 0.3s ease;
+}
+
+.group-header-row td .arrow.collapsed {
+  transform: rotate(-90deg);
+}
 
 /* --- Collapsible group content animation --- */
 .group-content-wrapper {
@@ -109,11 +106,10 @@ header h1 { font-size: 1.8em; margin: 0; color: #1a365d; }
 
 /* Responsive */
 @media (max-width: 768px) {
-  #main-table, thead, tbody, th, td, tr {
+  #main-table, tbody, td, tr {
     display: block;
   }
 
-  thead { display: none; }
   tr { margin-bottom: 12px; border-bottom: 1px solid #ddd; }
 
   td { display: flex; justify-content: space-between; padding: 8px; }
@@ -121,6 +117,7 @@ header h1 { font-size: 1.8em; margin: 0; color: #1a365d; }
 
   .group-header-row { display: block; position: static; }
   .group-content-wrapper { display: block; max-height: none; }
+  .group-header-row td .arrow { float: right; }
 }
 </style>
 </head>
@@ -135,26 +132,18 @@ header h1 { font-size: 1.8em; margin: 0; color: #1a365d; }
 
 <div class="controls">
   <input type="text" id="search" placeholder="Search players...">
-  <select id="selectionFilter">
-    <option value="">All Indicative Selection</option>
-  </select>
   <button id="export">Export Filtered Data</button>
 </div>
 
 <div id="table-container">
   <table id="main-table">
-    <thead>
-      <tr id="header-row"></tr>
-    </thead>
     <tbody id="table-body"></tbody>
   </table>
 </div>
 
 <script>
 const search = document.getElementById('search');
-const selectionFilter = document.getElementById('selectionFilter');
 const tbody = document.getElementById('table-body');
-const headerRow = document.getElementById('header-row');
 const exportBtn = document.getElementById('export');
 
 let headers = [];
@@ -167,66 +156,62 @@ const groupOrder = [
   "16U Dev","16U Elite","20U","Mens","Womens"
 ];
 
+// Load CSV
 fetch('teams.csv')
   .then(res => res.text())
   .then(text => {
     const lines = text.trim().split('\n').map(l => l.split(','));
     headers = lines[0].map(h => h.trim());
     indicativeIndex = headers.findIndex(h => h.toLowerCase() === 'indicative selection');
-    allRows = lines.slice(1).filter(r => r[indicativeIndex]?.trim() !== '');
-    populateDropdown();
-    populateHeaderRow();
+    // Remove Indicative Selection column
+    if(indicativeIndex >= 0) headers.splice(indicativeIndex,1);
+
+    allRows = lines.slice(1)
+      .map(r => {
+        if(indicativeIndex >= 0) r.splice(indicativeIndex,1);
+        return r;
+      });
+    
     renderGroups(allRows);
   });
 
-function populateHeaderRow() {
-  headerRow.innerHTML = '';
-  headers.forEach((h,i)=>{
-    const th = document.createElement('th');
-    th.textContent = h;
-    th.addEventListener('click', ()=>sortTable(document.getElementById('main-table'), i));
-    headerRow.appendChild(th);
-  });
-}
-
-function populateDropdown() {
-  const unique = [...new Set(allRows.map(r => r[indicativeIndex].trim()))];
-  const ordered = groupOrder.concat(unique.filter(v => !groupOrder.includes(v)));
-  ordered.forEach(v => {
-    const opt = document.createElement('option');
-    opt.value = v;
-    opt.textContent = v;
-    selectionFilter.appendChild(opt);
-  });
-}
-
+// Render groups with counts
 function renderGroups(rows) {
   tbody.innerHTML = '';
-  const groups = rows.reduce((acc,row) => {
-    const key = row[indicativeIndex].trim();
-    if(!acc[key]) acc[key] = [];
-    acc[key].push(row);
-    return acc;
-  }, {});
+  const groups = {};
+  rows.forEach(r=>{
+    const key = r[indicativeIndex] ?? 'Ungrouped';
+    if(!groups[key]) groups[key] = [];
+    groups[key].push(r);
+  });
 
-  const filterVal = selectionFilter.value;
-  const allGroupKeys = Object.keys(groups);
-  let visibleKeys = filterVal 
-    ? [filterVal] 
-    : [...groupOrder.filter(g=>allGroupKeys.includes(g)), ...allGroupKeys.filter(k=>!groupOrder.includes(k))];
+  let visibleKeys = Object.keys(groups).sort((a,b)=>{
+    const ai = groupOrder.indexOf(a);
+    const bi = groupOrder.indexOf(b);
+    return (ai===-1?1000:ai) - (bi===-1?1000:bi);
+  });
 
   visibleKeys.forEach(groupName => {
     const groupRows = groups[groupName];
-    if(!groupRows || groupRows.length === 0) return;
+    if(!groupRows || groupRows.length===0) return;
 
+    // Group header
     const headerTr = document.createElement('tr');
     headerTr.className = 'group-header-row';
     const headerTd = document.createElement('td');
     headerTd.colSpan = headers.length;
-    headerTd.textContent = groupName + ' ▼';
+
+    const arrow = document.createElement('span');
+    arrow.className = 'arrow';
+    arrow.textContent = '▼';
+
+    // Add group name + count
+    headerTd.textContent = `${groupName} (${groupRows.length}) `;
+    headerTd.appendChild(arrow);
     headerTr.appendChild(headerTd);
     tbody.appendChild(headerTr);
 
+    // Group content
     const contentWrapper = document.createElement('tbody');
     contentWrapper.className = 'group-content-wrapper';
     groupRows.forEach(r=>{
@@ -241,55 +226,26 @@ function renderGroups(rows) {
     });
     tbody.appendChild(contentWrapper);
 
-    // Set initial height dynamically
+    // Set initial max-height dynamically
     contentWrapper.style.maxHeight = contentWrapper.scrollHeight + 'px';
 
+    // Collapse/expand
     headerTr.addEventListener('click', ()=>{
-      const isHidden = contentWrapper.classList.toggle('hidden');
-      headerTd.textContent = groupName + (isHidden ? ' ▲' : ' ▼');
-
-      if(isHidden) {
-        contentWrapper.style.maxHeight = '0';
-      } else {
-        // Reset maxHeight dynamically for smooth expansion
-        contentWrapper.style.maxHeight = contentWrapper.scrollHeight + 'px';
-      }
+      const hidden = contentWrapper.classList.toggle('hidden');
+      arrow.classList.toggle('collapsed', hidden);
+      contentWrapper.style.maxHeight = hidden ? '0' : contentWrapper.scrollHeight + 'px';
     });
   });
 }
 
-function sortTable(table,colIndex) {
-  const tbody = table.querySelector('tbody');
-  const rows = Array.from(tbody.querySelectorAll('tr')).filter(r=>!r.classList.contains('group-header-row'));
-  const th = table.querySelectorAll('th')[colIndex];
-  const asc = !th.classList.contains('sort-asc');
-
-  rows.sort((a,b)=>{
-    const aText=a.children[colIndex].textContent.trim().toLowerCase();
-    const bText=b.children[colIndex].textContent.trim().toLowerCase();
-    if(!isNaN(aText) && !isNaN(bText)) return asc?aText-bText:bText-aText;
-    return asc?aText.localeCompare(bText):bText.localeCompare(aText);
-  });
-
-  rows.forEach(r=>tbody.appendChild(r));
-  table.querySelectorAll('th').forEach(h=>h.classList.remove('sort-asc','sort-desc'));
-  th.classList.toggle(asc?'sort-asc':'sort-desc');
-}
-
-function applyFilters() {
+// Search filter
+search.addEventListener('input', ()=>{
   const q = search.value.toLowerCase();
-  const sel = selectionFilter.value;
-  const filtered = allRows.filter(r=>{
-    const matchesSearch = r.some(c=>c.toLowerCase().includes(q));
-    const matchesSel = !sel || r[indicativeIndex]===sel;
-    return matchesSearch && matchesSel;
-  });
+  const filtered = allRows.filter(r=> r.some(c=> c.toLowerCase().includes(q)) );
   renderGroups(filtered);
-}
+});
 
-search.addEventListener('input', applyFilters);
-selectionFilter.addEventListener('change', applyFilters);
-
+// Export CSV
 exportBtn.addEventListener('click', ()=>{
   const rows = [];
   rows.push(headers.join(','));
