--- a/index.html
+++ b/index.html
@@ -148,9 +148,7 @@ const exportBtn = document.getElementById('export');
 
 let headers = [];
 let allRows = [];
-let indicativeIndex = -1;
-
-const groupOrder = [
+let groupOrder = [
   "10U Dev","10U Elite","12U Dev","12U Elite",
   "14U Dev Blue","14U Elite Black","14U Elite Gold","14U Dev Red",
   "16U Dev","16U Elite","20U","Mens","Womens"
@@ -162,30 +160,32 @@ fetch('teams.csv')
   .then(text => {
     const lines = text.trim().split('\n').map(l => l.split(','));
     headers = lines[0].map(h => h.trim());
-    indicativeIndex = headers.findIndex(h => h.toLowerCase() === 'indicative selection');
-    // Remove Indicative Selection column
-    if(indicativeIndex >= 0) headers.splice(indicativeIndex,1);
-
-    allRows = lines.slice(1)
-      .map(r => {
-        if(indicativeIndex >= 0) r.splice(indicativeIndex,1);
-        return r;
-      });
     
+    const groupIndex = headers.findIndex(h => h.toLowerCase() === 'indicative selection');
+
+    // Remove column from headers (for display only)
+    if(groupIndex >= 0) headers.splice(groupIndex,1);
+
+    allRows = lines.slice(1).map(r => {
+      const rowCopy = [...r];
+      const groupValue = rowCopy[groupIndex];
+      rowCopy.splice(groupIndex,1); // remove from display
+      return { data: rowCopy, group: groupValue };
+    });
+
     renderGroups(allRows);
   });
 
-// Render groups with counts
 function renderGroups(rows) {
   tbody.innerHTML = '';
   const groups = {};
   rows.forEach(r=>{
-    const key = r[indicativeIndex] ?? 'Ungrouped';
+    const key = r.group || 'Ungrouped';
     if(!groups[key]) groups[key] = [];
-    groups[key].push(r);
+    groups[key].push(r.data);
   });
 
-  let visibleKeys = Object.keys(groups).sort((a,b)=>{
+  const visibleKeys = Object.keys(groups).sort((a,b)=>{
     const ai = groupOrder.indexOf(a);
     const bi = groupOrder.indexOf(b);
     return (ai===-1?1000:ai) - (bi===-1?1000:bi);
@@ -195,17 +195,14 @@ function renderGroups(rows) {
     const groupRows = groups[groupName];
     if(!groupRows || groupRows.length===0) return;
 
-    // Group header
+    // Group header with count
     const headerTr = document.createElement('tr');
     headerTr.className = 'group-header-row';
     const headerTd = document.createElement('td');
     headerTd.colSpan = headers.length;
-
     const arrow = document.createElement('span');
     arrow.className = 'arrow';
     arrow.textContent = '▼';
-
-    // Add group name + count
     headerTd.textContent = `${groupName} (${groupRows.length}) `;
     headerTd.appendChild(arrow);
     headerTr.appendChild(headerTd);
@@ -226,7 +223,6 @@ function renderGroups(rows) {
     });
     tbody.appendChild(contentWrapper);
 
-    // Set initial max-height dynamically
     contentWrapper.style.maxHeight = contentWrapper.scrollHeight + 'px';
 
     // Collapse/expand
@@ -241,7 +237,7 @@ function renderGroups(rows) {
 // Search filter
 search.addEventListener('input', ()=>{
   const q = search.value.toLowerCase();
-  const filtered = allRows.filter(r=> r.some(c=> c.toLowerCase().includes(q)) );
+  const filtered = allRows.filter(r=> r.data.some(c=> c.toLowerCase().includes(q)) );
   renderGroups(filtered);
 });
 
