--- a/index.html
+++ b/index.html
@@ -1,285 +1,232 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Te Tai Hou Teams – 2025</title>
 <style>
-body {
-  font-family: "Segoe UI", Roboto, sans-serif;
-  background-color: #f9fafb;
-  margin: 0;
-  padding: 20px;
-  color: #333;
-}
+  /* Sticky group headers */
+  section {
+    margin-bottom: 1rem;
+    border-radius: 0.75rem;
+    background: #fff;
+    box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+    overflow: hidden;
+  }
 
-header {
-  display: flex;
-  align-items: center;
-  gap: 12px;
-  margin-bottom: 24px;
-}
+  .group-header {
+    font-weight: 600;
+    font-size: 1.1rem;
+    padding: 0.6rem 1rem;
+    background: linear-gradient(to right, #ef4444, #f97316);
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+  }
 
-header img { height: 60px; border-radius: 50%; }
-header h1 { font-size: 1.8em; margin: 0; color: #1a365d; }
+  .group-content {
+    padding: 0;
+    overflow-x: auto;
+    transition: all 0.3s ease;
+  }
 
-.controls {
-  display: flex;
-  justify-content: center;
-  gap: 10px;
-  flex-wrap: wrap;
-  margin-bottom: 12px;
-}
+  .group-content.hidden {
+    display: none;
+  }
 
-.controls input {
-  padding: 6px 10px;
-  border: 1px solid #cbd5e0;
-  border-radius: 6px;
-  font-size: 0.95em;
-}
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    font-size: 0.9rem;
+  }
 
-.controls input:focus {
-  outline: none;
-  border-color: #2b6cb0;
-  box-shadow: 0 0 4px rgba(43,108,176,0.3);
-}
+  thead th {
+    background: #f3f4f6;
+    position: sticky;
+    top: 0;
+    z-index: 2;
+    padding: 0.5rem;
+    text-align: left;
+    cursor: pointer;
+  }
 
-#table-container {
-  width: 40%;
-  max-width: 800px;
-  margin: 0 auto;
-  overflow-x: auto;
-}
+  tbody td {
+    border-top: 1px solid #e5e7eb;
+    padding: 0.4rem 0.5rem;
+  }
 
-#main-table {
-  width: 100%;
-  border-collapse: collapse;
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-  table-layout: fixed; /* force equal widths */
-}
+  tbody tr:hover {
+    background: #f9fafb;
+  }
 
-#main-table tbody td {
-  padding: 10px;
-  border-bottom: 1px solid #e2e8f0;
-  width: 50%; /* evenly distribute 2 columns */
-  word-wrap: break-word;
-}
+  th.sort-asc, th.sort-desc {
+    background: #e5e7eb;
+  }
 
-/* Group headers */
-.group-header-row {
-  display: table-row;
-  background-color: #e6fffa;
-  color: #234e52;
-  font-weight: bold;
-  cursor: pointer;
-  border-top: 2px solid #81e6d9;
-  position: sticky;
-  top: 0;
-  z-index: 2;
-}
-
-.group-header-row td {
-  display: block;       /* Full width of table */
-  width: 100%;
-  box-sizing: border-box;
-  padding: 8px;
-  position: relative;
-}
-
-/* Arrow animation */
-.group-header-row td .arrow {
-  display: inline-block;
-  margin-left: 10px;
-  transition: transform 0.3s ease;
-}
-.group-header-row td .arrow.collapsed { transform: rotate(-90deg); }
-
-/* Collapsible group content */
-.group-content-wrapper {
-  display: table-row-group;
-  overflow: hidden;
-  transition: max-height 0.3s ease;
-}
-.group-content-wrapper.hidden { max-height: 0 !important; }
-
-/* Sort icon */
-.sort-icon {
-  cursor: pointer;
-  margin-left: 5px;
-  color: #2b6cb0;
-}
-.sort-icon:hover {
-  color: #1a365d;
-  font-weight: bold;
-}
-
-/* Responsive */
-@media (max-width: 768px) {
-  #table-container { width: 100%; }
-  #main-table, tbody, td, tr { display: block; }
-  tr { margin-bottom: 12px; border-bottom: 1px solid #ddd; }
-  td { display: flex; justify-content: space-between; padding: 8px; }
-  td::before { content: attr(data-label); font-weight: 600; color: #2b6cb0; }
-  .group-header-row { display: block; position: static; }
-  .group-content-wrapper { display: block; max-height: none; }
-  .group-header-row td .arrow { float: right; }
-}
+  /* Hide the arrow icons from previous versions */
+  th::after {
+    content: '';
+  }
 </style>
-</head>
-<body>
-
-<header>
-  <a href="https://www.poriruaheatbasketballclub.org" target="_blank">
-    <img src="images/logo.png" alt="Te Tai Hou Logo">
-  </a>
-  <h1>Te Tai Hou Teams – 2025</h1>
-</header>
-
-<div class="controls">
-  <input type="text" id="search" placeholder="Search players...">
-  <button id="export">Export Filtered Data</button>
-</div>
-
-<div id="table-container">
-  <table id="main-table">
-    <tbody id="table-body"></tbody>
-  </table>
-</div>
 
 <script>
 const search = document.getElementById('search');
-const tbody = document.getElementById('table-body');
+const selectionFilter = document.getElementById('selectionFilter');
+const container = document.getElementById('table-container');
 const exportBtn = document.getElementById('export');
 
 let headers = [];
 let allRows = [];
-let groupOrder = [
+let indicativeIndex = -1;
+
+const groupOrder = [
   "10U Dev","10U Elite","12U Dev","12U Elite",
   "14U Dev Blue","14U Elite Black","14U Elite Gold","14U Dev Red",
   "16U Dev","16U Elite","20U","Mens","Womens"
 ];
 
-// Load CSV
-fetch('teams.csv')
+// --- Load CSV ---
+fetch('data.csv')
   .then(res => res.text())
   .then(text => {
     const lines = text.trim().split('\n').map(l => l.split(','));
     headers = lines[0].map(h => h.trim());
+    indicativeIndex = headers.findIndex(h => h.toLowerCase() === 'indicative selection');
 
-    const groupIndex = headers.findIndex(h => h.toLowerCase() === 'indicative selection');
-    if(groupIndex >= 0) headers.splice(groupIndex,1);
+    allRows = lines.slice(1)
+      .map(r => r.map(c => c.trim()))
+      .filter(r => r[indicativeIndex] && r[indicativeIndex] !== '');
 
-    allRows = lines.slice(1).map(r => {
-      const rowCopy = [...r];
-      const groupValue = rowCopy[groupIndex];
-      rowCopy.splice(groupIndex,1); // remove from visible data
-      return { data: rowCopy, group: groupValue };
-    });
-
+    populateDropdown();
     renderGroups(allRows);
   });
 
-// Render groups
+// --- Populate dropdown ---
+function populateDropdown() {
+  const unique = [...new Set(allRows.map(r => r[indicativeIndex]))];
+  const ordered = groupOrder.concat(unique.filter(v => !groupOrder.includes(v)));
+  ordered.forEach(v => {
+    const opt = document.createElement('option');
+    opt.value = v;
+    opt.textContent = v;
+    selectionFilter.appendChild(opt);
+  });
+}
+
+// --- Render grouped tables ---
 function renderGroups(rows) {
-  tbody.innerHTML = '';
-  const groups = {};
-  rows.forEach(r=>{
-    const key = r.group || 'Ungrouped';
-    if(!groups[key]) groups[key] = [];
-    groups[key].push(r.data);
-  });
+  container.innerHTML = '';
+  const groups = rows.reduce((acc,row)=>{
+    const key = row[indicativeIndex].trim();
+    if(!acc[key]) acc[key] = [];
+    acc[key].push(row);
+    return acc;
+  },{});
 
-  const visibleKeys = Object.keys(groups).sort((a,b)=>{
-    const ai = groupOrder.indexOf(a);
-    const bi = groupOrder.indexOf(b);
-    return (ai===-1?1000:ai) - (bi===-1?1000:bi);
-  });
+  const filterVal = selectionFilter.value;
+  const allGroupKeys = Object.keys(groups);
+  const visibleKeys = filterVal
+    ? [filterVal]
+    : [...groupOrder.filter(g=>allGroupKeys.includes(g)), ...allGroupKeys.filter(k=>!groupOrder.includes(k))];
 
-  visibleKeys.forEach(groupName => {
+  visibleKeys.forEach(groupName=>{
     const groupRows = groups[groupName];
-    if(!groupRows || groupRows.length===0) return;
+    if(!groupRows?.length) return;
 
-    // Group header with count
-    const headerTr = document.createElement('tr');
-    headerTr.className = 'group-header-row';
-    const headerTd = document.createElement('td');
-    headerTd.colSpan = headers.length;
+    const section = document.createElement('section');
+
+    // Group header
+    const header = document.createElement('div');
+    header.className = 'group-header';
+    header.textContent = groupName;
     const arrow = document.createElement('span');
-    arrow.className = 'arrow';
     arrow.textContent = '▼';
-    headerTd.textContent = `${groupName} (${groupRows.length}) `;
-    headerTd.appendChild(arrow);
-    headerTr.appendChild(headerTd);
-    tbody.appendChild(headerTr);
+    header.appendChild(arrow);
+    section.appendChild(header);
 
-    // Group content
-    const contentWrapper = document.createElement('tbody');
-    contentWrapper.className = 'group-content-wrapper';
+    const wrapper = document.createElement('div');
+    wrapper.className = 'group-content';
 
+    const table = document.createElement('table');
+
+    // Table header with clickable sorting
+    const thead = document.createElement('thead');
+    const headerRow = document.createElement('tr');
+    headers.forEach((h,i)=>{
+      const th = document.createElement('th');
+      th.textContent = h;
+      th.addEventListener('click',()=>sortTable(table,i));
+      headerRow.appendChild(th);
+    });
+    thead.appendChild(headerRow);
+    table.appendChild(thead);
+
+    // Table body
+    const tbody = document.createElement('tbody');
     groupRows.forEach(r=>{
       const tr = document.createElement('tr');
-      r.forEach((c, idx) => {
+      r.forEach((c,idx)=>{
         const td = document.createElement('td');
-        td.textContent = c.trim();
+        td.textContent = c;
         td.setAttribute('data-label', headers[idx]);
-
-        // Sort icon
-        const sortIcon = document.createElement('span');
-        sortIcon.textContent = ' ↕';
-        sortIcon.className = 'sort-icon';
-        sortIcon.addEventListener('click', (e)=>{
-          e.stopPropagation();
-          sortGroup(contentWrapper, idx);
-        });
-        td.appendChild(sortIcon);
         tr.appendChild(td);
       });
-      contentWrapper.appendChild(tr);
+      tbody.appendChild(tr);
     });
+    table.appendChild(tbody);
+    wrapper.appendChild(table);
+    section.appendChild(wrapper);
+    container.appendChild(section);
 
-    tbody.appendChild(contentWrapper);
-    contentWrapper.style.maxHeight = contentWrapper.scrollHeight + 'px';
-
-    // Collapse/expand
-    headerTr.addEventListener('click', ()=>{
-      const hidden = contentWrapper.classList.toggle('hidden');
-      arrow.classList.toggle('collapsed', hidden);
-      contentWrapper.style.maxHeight = hidden ? '0' : contentWrapper.scrollHeight + 'px';
+    // Collapsible section
+    header.addEventListener('click',()=>{
+      wrapper.classList.toggle('hidden');
+      arrow.textContent = wrapper.classList.contains('hidden') ? '▲' : '▼';
     });
   });
 }
 
-// Sort within group
-function sortGroup(tbodyGroup, colIndex) {
-  const rows = Array.from(tbodyGroup.querySelectorAll('tr'));
-  const asc = !tbodyGroup.asc;
+// --- Sorting ---
+function sortTable(table,colIndex) {
+  const tbody = table.querySelector('tbody');
+  const rows = Array.from(tbody.querySelectorAll('tr'));
+  const th = table.querySelectorAll('th')[colIndex];
+  const asc = !th.classList.contains('sort-asc');
+
   rows.sort((a,b)=>{
-    const aText = a.children[colIndex].firstChild.textContent.trim().toLowerCase();
-    const bText = b.children[colIndex].firstChild.textContent.trim().toLowerCase();
+    const aText=a.children[colIndex].textContent.trim().toLowerCase();
+    const bText=b.children[colIndex].textContent.trim().toLowerCase();
     if(!isNaN(aText) && !isNaN(bText)) return asc?aText-bText:bText-aText;
     return asc?aText.localeCompare(bText):bText.localeCompare(aText);
   });
-  rows.forEach(r=>tbodyGroup.appendChild(r));
-  tbodyGroup.asc = asc;
+
+  rows.forEach(r=>tbody.appendChild(r));
+  table.querySelectorAll('th').forEach(h=>h.classList.remove('sort-asc','sort-desc'));
+  th.classList.toggle(asc?'sort-asc':'sort-desc');
 }
 
-// Search
-search.addEventListener('input', ()=>{
+// --- Filters ---
+function applyFilters() {
   const q = search.value.toLowerCase();
-  const filtered = allRows.filter(r=> r.data.some(c=> c.toLowerCase().includes(q)) );
+  const sel = selectionFilter.value;
+  const filtered = allRows.filter(r=>{
+    const matchesSearch = r.some(c=>c.toLowerCase().includes(q));
+    const matchesSel = !sel || r[indicativeIndex]===sel;
+    return matchesSearch && matchesSel;
+  });
   renderGroups(filtered);
-});
+}
 
-// Export CSV
+search.addEventListener('input', applyFilters);
+selectionFilter.addEventListener('change', applyFilters);
+
+// --- Export only visible rows ---
 exportBtn.addEventListener('click', ()=>{
   const rows = [];
   rows.push(headers.join(','));
-  tbody.querySelectorAll('tr').forEach(tr=>{
-    if(tr.classList.contains('group-header-row')) return;
-    const cells = Array.from(tr.children).map(td=>td.firstChild.textContent);
-    rows.push(cells.join(','));
+  container.querySelectorAll('section').forEach(section=>{
+    const wrapper = section.querySelector('.group-content');
+    if(wrapper.classList.contains('hidden')) return;
+    wrapper.querySelectorAll('tbody tr').forEach(tr=>{
+      const cells = Array.from(tr.children).map(td=>td.textContent);
+      rows.push(cells.join(','));
+    });
   });
   const blob = new Blob([rows.join('\n')], {type:'text/csv;charset=utf-8;'});
   const link = document.createElement('a');
@@ -288,5 +235,3 @@ exportBtn.addEventListener('click', ()=>{
   link.click();
 });
 </script>
-</body>
-</html>
