--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ const groupOrder = [
 ];
 
 // --- Load CSV ---
-fetch('data.csv')
+fetch('teams.csv')
   .then(res => res.text())
   .then(text => {
     const lines = text.trim().split('\n').map(l => l.split(','));
@@ -328,3 +328,4 @@ exportBtn.addEventListener('click', ()=>{
 </script>
 </body>
 </html>
+
